--- a/scr/main/java/build.gradle
+++ b/scr/main/java/build.gradle
@@ -4,12 +4,12 @@
  * This is a general purpose Gradle build.
  * Learn more about Gradle by exploring our samples at https://docs.gradle.org/7.2/samples
  */
-apply puglin: 'java'
+apply plugin: 'java'
 
 version = '1.0'
 
 jar {
     manifest {
-        attributes {'Main-class:' 'HelloWorld'}
+        attributes 'Main-class': 'HelloWorld'
     }
 }
